--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,12 +1,24 @@
 .large-hero{
     position: relative;
+
+    &__text-content{
+        position: absolute;
+        /** horizontal position **/
+        width: 100%;
+        text-align: center;
+        /** vertical position **/
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    &__title {
+    font-weight: 300;
+    color: #2f5572;
+    font-size: 4.8rem;
+    }
+    &__subtitle {
+        font-weight: 300;
+        color: #2f5572;
+        font-size: 2.9rem;
+    }
 }
-.large-hero__text-content{
-    position: absolute;
-    /** horizontal position **/
-    width: 100%;
-    text-align: center;
-    /** vertical position **/
-    top: 50%;
-    transform: translateY(-50%);
-}
+
