--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,5 +1,7 @@
 @import "normalize.css";
+@import "base/variables";
 @import "base/_global";
+@import "modules/_btn";
 @import "modules/_large-hero";
 
 
