--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -11,6 +11,7 @@
         transform: translateY(-50%);
     }
     &__title {
+    //background: $variableThatDoesntExist;
     margin: 0;
     font-weight: 300;
     color: $mainBlue;
