--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,5 +1,6 @@
 .large-hero{
     position: relative;
+    border-bottom: 10px solid $mainBlue;
 
         &__text-content{
         position: absolute;
@@ -10,29 +11,28 @@
         top: 50%;
         transform: translateY(-50%);
     }
+    &__image {
+        display: block;
+    }
+
     &__title {
     //background: $variableThatDoesntExist;
     margin: 0;
     font-weight: 300;
     color: $mainBlue;
-    font-size: 1.1rem;
+    font-size: 2.4rem;
 
     @mixin atSmall {
-        font-size: 2rem;
-    }
-    @mixin atMedium {
-        font-size: 3.2rem;
-    }
-    @mixin atLarge {
         font-size: 4.8rem;
     }
+ 
 
     }
     &__subtitle {
         margin: 0;
         font-weight: 300;
         color: $mainBlue;
-        font-size: 1.1rem;
+        font-size: 1.5rem;
 
         @mixin atSmall {
             font-size: 2.9rem;
@@ -41,11 +41,15 @@
     &__description {
         font-weight: 100;
         color: #fff;
-        font-size: 1.875rem;
+        font-size: 1.1rem;
         text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
         max-width: 30rem;
         margin-left: auto;
         margin-right: auto;
+
+        @mixin atSmall {
+            font-size: 1.875rem;
+        }
     }
 }
 
