--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -4,6 +4,8 @@
 @import "base/_global";
 @import "modules/_btn";
 @import "modules/_large-hero";
+@import "modules/_wrapper";
+@import "modules/_page-section";
 
 
 
