--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,7 +1,12 @@
 /** top and bottom paddding **/
 .page-section {
 
-    padding: 4.5rem 0;
+    padding: 1.2rem 0;
+
+    @mixin atMedium {
+        padding: 4.5rem 0;
+    }
+    
 
     &--blue {
         background-color: $mainBlue;
