--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -2,7 +2,7 @@
     overflow: hidden;
     padding-left: 18px;
     padding-right: 18px;
-    max-width: 1200px;
+    max-width: 1236px;
     margin-left: auto;
     margin-right: auto;
 
@@ -10,8 +10,20 @@
         max-width: 976px;
     }
 
+
+    &--b-margin {
+
+        margin-bottom: 1rem;
+
+        @mixin atSmall {
+            margin-bottom: 3.875rem;
+        }
+       
+    }
+
     .wrapper {
         padding-left: 0;
         padding-right: 0;
     }
+
 }
