--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -10,7 +10,8 @@
 
     p {
         line-height: 1.65;
-        margin: 1.8rem 0;
+        margin: 0 0 1.8rem 0;
+        font-weight: 300;
     }
     p a {
         font-weight: 700;
