Styled testimonials desktop and mobile

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,7 +1,13 @@
 .row {
 
     @mixin clearfix;
-
+    
+    &__b-margin-until-medium {
+        margin-bottom: 1rem;
+    }
+    &--t-padding {
+        padding-top: 80px;
+    }
 
     &--gutters {
         margin-right: -65px;
@@ -9,7 +15,9 @@
     &--gutters-large {
         margin-right: -100px;
     }
-
+    &--gutters-small {
+        margin-right: -45px;
+    }
     &--gutters > div{
         padding-right: 65px;
     }
@@ -17,10 +25,10 @@
     &--gutters-large > div{
         padding-right: 100px;
     }
-    
-    &__b-margin-until-medium {
-        margin-bottom: 1rem;
+    &--gutters-small > div{
+        padding-right: 45px;
     }
+
 
     @mixin atMedium {
 
@@ -50,6 +58,16 @@
         }
     }
 
+    /** begin equel hights rules **/
  
+    &--equal-height-at-medium{
+        @mixin atMedium {
+            display: flex;
+        }
+        & > div {
+            float: none;
+            display: flex;
+        }
+    }
     
 }
