--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -1,4 +1,5 @@
 .section-title {
+
     font-weight: 300;
     font-size: 2.55rem;
     text-align: center;
@@ -15,18 +16,19 @@
     }
     &__icon {
     
-        display: block;
+        
         margin-left: auto;
         margin-right:auto; 
         margin-bottom: .6rem;
+        display: block;
         
         @mixin atSmall {
             position: relative;
             top:8px;
-            margin-right: 0.5rem;
+            margin-right: .5rem;
             margin-left: 0;
             margin-bottom: 0;
-            display: inline;
+            display: inline-block;
         }
         
     }
