--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -10,6 +10,11 @@
         /** vertical position **/
         top: 50%;
         transform: translateY(-50%);
+        padding-top: 88px;
+
+        @mixin atMedium {
+            padding-top:60px;
+        }
     }
     &__image {
         display: block;
