--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -2,17 +2,57 @@
     position: absolute;
     width: 100%;
     z-index: 2;
-    background-color: rgba($mainBlue, .3);
     padding: 10px 0;
+
+    @mixin atMedium {
+        background-color: rgba($mainBlue, .3);
+    }
 
     &__btn-container {
         float: right;
     }
 
     &__logo {
+
         position: absolute;
         background-color: $mainBlue;
         padding: 25px 36px;
+        left: 50%;
+        transform:translateX(-50%) scale(.8);
+        transform-origin: 50% 0%;
         top: 0;
+        
+        @mixin atMedium {
+            left:auto;
+            transform: translateX(0);
+        }
     }
+    &__logo__graphic {
+        text-indent: -9999px;
+    }
+
+    &__menu-icon {
+
+        @mixin atMedium {
+            display: none;
+        }
+
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        background: white;
+        top: 10px;
+        right:10px;
+    }
+
+    &__menu-content {
+
+        display: none;
+
+        @mixin atMedium{
+            display: block;
+        }
+
+    }
+
 }
