--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -48,6 +48,13 @@
             padding: 12px 0; 
             font-size: 1rem;
             background-color: transparent;
+
+
+            /** Yellow links **/
+
+            &.is-current-link {
+                color: #fabb69;
+            }
         }
     }
 }
