--- a/app/assets/styles/modules/_sprite.css
+++ b/app/assets/styles/modules/_sprite.css
@@ -1,7 +1,7 @@
 /** Do not edit directly, instead edit /gulp/templates/sprite.css **/
 
     .icon{
-         background-image: url('/assets/images/sprites/sprite-e79e95cc.svg');
+         background-image: url('../../assets/images/sprites/sprite-e79e95cc.svg');
     }
         .icon--clear-view-escapes {
             width: 144.4px;
